@@ -1,131 +1,98 @@
 package com.nexusy.cipher;
 
 /**
+ * 当秘钥长度为192或256时，需要替换JAVA_HOME/jre/lib/security下的local_policy.jar和US_export_policy.jar
+ *
  * @author lanhuidong
  * @since 2017-08-31
  */
 
-import sun.misc.BASE64Encoder;
-
-import javax.crypto.*;
+import javax.crypto.Cipher;
+import javax.crypto.KeyGenerator;
+import javax.crypto.SecretKey;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
-import java.security.InvalidAlgorithmParameterException;
-import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 public class AESCipher {
 
-    /**
-     * 注意key和加密用到的字符串是不一样的 加密还要指定填充的加密模式和填充模式 AES密钥可以是128或者256，加密模式包括ECB, CBC等
-     * ECB模式是分组的模式，CBC是分块加密后，每块与前一块的加密结果异或后再加密 第一块加密的明文是与IV变量进行异或
-     */
     public static final String KEY_ALGORITHM = "AES";
     public static final String ECB_CIPHER_ALGORITHM = "AES/ECB/PKCS5Padding";
     public static final String CBC_CIPHER_ALGORITHM = "AES/CBC/PKCS5Padding";
-    public static final String PLAIN_TEXT = "{\"action\":105,\"type\":1,\"request\":{\"deviceSn\":\"XX1000\","
-            + "\"channelNo\":0,\"alarmTime\":1503472276881,\"alarmType\":1,\"imageUrl\":\"http://www.manniu.com/1.jpg\""
-            + ",\"videoUrl\":\"http://www.manniu.com/1.mp4\",\"vStartTime\":1503472276881,\"vEndTime\":1503472276881}}";
 
-    /**
-     * IV(Initialization Value)是一个初始值，对于CBC模式来说，它必须是随机选取并且需要保密的
-     * 而且它的长度和密码分组相同(比如：对于AES 128为128位，即长度为16的byte类型数组)
-     */
     public static final byte[] IVPARAMETERS = new byte[]{1, 2, 3, 4, 5, 6, 7,
             8, 9, 10, 11, 12, 13, 14, 15, 16};
 
-    public static void main(String[] arg) {
-        byte[] secretBytes = generateAESSecretKey();
+    public static void main(String[] arg) throws Exception {
+        byte[] secretBytes = generateAESSecretKey(128);
         SecretKey key = restoreSecretKey(secretBytes);
-        byte[] encodedText = AesEcbEncode(PLAIN_TEXT.getBytes(), key);
+        byte[] encodedText = aesEcbEncrypt(CipherTest.PLAIN_TEXT.getBytes("UTF-8"), key);
 
-        System.out.println("AES ECB encoded with Base64: \n" + new BASE64Encoder().encode(encodedText));
-        System.out.println("AES ECB decoded: \n" + AesEcbDecode(encodedText, key));
-
-
-        encodedText = AesCbcEncode(PLAIN_TEXT.getBytes(), key, IVPARAMETERS);
+        System.out.println("AES ECB encrypt with Base64: \n" + Base64.getEncoder().encodeToString(encodedText));
+        System.out.println("AES ECB decrypt: \n" + aesEcbDecrypt(encodedText, key));
 
 
-        System.out.println("AES CBC encoded with Base64: \n" + new BASE64Encoder().encode(encodedText));
-        System.out.println("AES CBC decoded: \n" + AesCbcDecode(encodedText, key, IVPARAMETERS));
+        encodedText = aesCbcEncrypt(CipherTest.PLAIN_TEXT.getBytes("UTF-8"), key, IVPARAMETERS);
+
+
+        System.out.println("AES CBC encrypt with Base64: \n" + Base64.getEncoder().encodeToString(encodedText));
+        System.out.println("AES CBC decrypt: \n" + aesCbcDecrypt(encodedText, key, IVPARAMETERS));
     }
 
-    public static byte[] AesEcbEncode(byte[] plainText, SecretKey key) {
+    public static byte[] aesEcbEncrypt(byte[] plainText, SecretKey key) {
         try {
-
             Cipher cipher = Cipher.getInstance(ECB_CIPHER_ALGORITHM);
             cipher.init(Cipher.ENCRYPT_MODE, key);
             return cipher.doFinal(plainText);
-        } catch (NoSuchAlgorithmException | NoSuchPaddingException
-                | InvalidKeyException | IllegalBlockSizeException
-                | BadPaddingException e) {
+        } catch (Exception e) {
             e.printStackTrace();
         }
         return null;
     }
 
-    public static String AesEcbDecode(byte[] decodedText, SecretKey key) {
+    public static String aesEcbDecrypt(byte[] decodedText, SecretKey key) {
         try {
             Cipher cipher = Cipher.getInstance(ECB_CIPHER_ALGORITHM);
             cipher.init(Cipher.DECRYPT_MODE, key);
-            return new String(cipher.doFinal(decodedText));
-        } catch (NoSuchAlgorithmException | NoSuchPaddingException
-                | InvalidKeyException | IllegalBlockSizeException
-                | BadPaddingException e) {
+            return new String(cipher.doFinal(decodedText), "UTF-8");
+        } catch (Exception e) {
             e.printStackTrace();
         }
         return null;
 
     }
 
-    public static byte[] AesCbcEncode(byte[] plainText, SecretKey key,
-                                      byte[] IVParameter) {
+    public static byte[] aesCbcEncrypt(byte[] plainText, SecretKey key, byte[] IVParameter) {
         try {
             IvParameterSpec ivParameterSpec = new IvParameterSpec(IVParameter);
-
             Cipher cipher = Cipher.getInstance(CBC_CIPHER_ALGORITHM);
             cipher.init(Cipher.ENCRYPT_MODE, key, ivParameterSpec);
             return cipher.doFinal(plainText);
-
-        } catch (NoSuchAlgorithmException | NoSuchPaddingException
-                | InvalidKeyException | InvalidAlgorithmParameterException
-                | IllegalBlockSizeException | BadPaddingException e) {
+        } catch (Exception e) {
             e.printStackTrace();
         }
         return null;
     }
 
-    public static String AesCbcDecode(byte[] decodedText, SecretKey key,
-                                      byte[] IVParameter) {
+    public static String aesCbcDecrypt(byte[] decodedText, SecretKey key, byte[] IVParameter) {
         IvParameterSpec ivParameterSpec = new IvParameterSpec(IVParameter);
-
         try {
             Cipher cipher = Cipher.getInstance(CBC_CIPHER_ALGORITHM);
             cipher.init(Cipher.DECRYPT_MODE, key, ivParameterSpec);
-            return new String(cipher.doFinal(decodedText));
-        } catch (NoSuchAlgorithmException | NoSuchPaddingException
-                | InvalidKeyException | InvalidAlgorithmParameterException
-                | IllegalBlockSizeException | BadPaddingException e) {
-            // TODO Auto-generated catch block
+            return new String(cipher.doFinal(decodedText), "UTF-8");
+        } catch (Exception e) {
             e.printStackTrace();
         }
-
         return null;
 
     }
 
-    /**
-     * 1.创建一个KeyGenerator
-     * 2.调用KeyGenerator.generateKey方法
-     * 由于某些原因，这里只能是128，如果设置为256会报异常
-     *
-     * @return
-     */
-    public static byte[] generateAESSecretKey() {
+    public static byte[] generateAESSecretKey(int bitNum) {
         KeyGenerator keyGenerator;
         try {
             keyGenerator = KeyGenerator.getInstance(KEY_ALGORITHM);
-            keyGenerator.init(128);
+            keyGenerator.init(bitNum);
             return keyGenerator.generateKey().getEncoded();
         } catch (NoSuchAlgorithmException e) {
             e.printStackTrace();
@@ -133,14 +100,7 @@ public class AESCipher {
         return null;
     }
 
-    /**
-     * 还原密钥
-     *
-     * @param secretBytes
-     * @return
-     */
     public static SecretKey restoreSecretKey(byte[] secretBytes) {
-        SecretKey secretKey = new SecretKeySpec(secretBytes, KEY_ALGORITHM);
-        return secretKey;
+        return new SecretKeySpec(secretBytes, KEY_ALGORITHM);
     }
 }
